--- a/produtos.html
+++ b/produtos.html
@@ -1,27 +1,48 @@
-;&lt;!DOCTYPE html&gt;
-&lt;html lang=&quot;pt-br&quot;&gt;
-&lt;head&gt;
-&lt;meta charset=&quot;UTF-8&quot;&gt;
-&lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;
-&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
-&lt;title&gt;Nome do site&lt;/title&gt;
-&lt;/head&gt;
-&lt;body style=&quot;background-color:#cccccc&quot;&gt;
-&lt;img src=&quot;SUA IMAGEM.jpg&quot; width=&quot;100%&quot;&gt;
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Worship streetwer</title>
 
-&lt;h1 style=&quot;text-align: center&quot;&gt;Restskateshop&lt;/h1&gt;
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="produtos.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="image-removebg-preview (2).png"></h1>
 
-&lt;p style=&quot;text-align: center;&quot;&gt;Localizada no coração da cidade a &lt;strong&gt;Barbearia
-Alura&lt;/strong&gt; traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada
-em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.&lt;/p&gt;
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-&lt;p style=&quot;font-size: 20px; text-align: center&quot;;&gt;&lt;em&gt;Nossa missão é: &lt;strong
-style=&quot;color: red ;&quot;&gt;&quot;Proporcionar auto-estima e qualidade de vida aos
-clientes&quot;&lt;/strong&gt;.&lt;/em&gt;&lt;/p&gt;
-
-&lt;p style=&quot;text-align: center;&quot;&gt;Oferecemos profissionais experientes e antenados às
-mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade,
-garantindo qualidade e satisfação dos nossos clientes.&lt;/p&gt;
-
-&lt;/body&gt;
-&lt;/html&gt;
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>skates</h2>
+					<img src="image-removebg-preview (1).png">
+					<p class="produto-descricao">skates montados no melhor preço</p>
+					<p class="produto-preco">R$ 110,00</p>
+				</li>
+				<li>
+					<h2>truks</h2>
+					<img src="image-removebg-preview (2).png">
+					<p class="produto-descricao"><truks melhor qualidade/p>
+					<p class="produto-preco">R$ 500,00</p>
+				</li>
+				<li>
+					<h2>rodinhas e lixa </h2>
+					<img src="image-removebg-preview.png">
+					<p class="produto-descricao">rodinhas de borracha coloridas</p>
+					<p class="produto-preco">R$ 80,00</p>
+				</li>
+			</ul>
+		</main>
+	</body>
+</html>
